feat: 세션 성공률 SLI 측정을 위한 Prometheus Counter 구현